<?xml version="1.0" encoding="utf-8"?>

<!--
	BerryTubeChat android client
	Copyright (C) 2012-2013 Daniel Triendl <trellmor@trellmor.com>
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	 
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">BerryTubeChat</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_users">Users</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_poll">Poll</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_autocomplete_nick">Autocomplete nick</string>
    <string name="menu_reset_my_drinks">Reset</string>
    <string name="title_activity_main">BerryTube</string>
    <string name="title_activity_chat">BerryTube Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_dialog_about">About BerryTube Chat</string>   
    <string name="edit_user">Username</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="check_remember">Remember</string>
    <string name="edit_chat_msg">Message</string>
    <string name="select_user">Select user</string>
    <string name="drink">BP</string>
    <string name="chat_drink">drink!</string>
    <string name="drink_count_single">drink</string>
    <string name="drink_count_plural">drinks</string>
    <string name="current_video">Current video:</string>
    <string name="disconnected">Connection lost</string>
    <string name="message_disconnected">Connection to BerryTube.tv lost.</string>
    <string name="nopoll">No poll</string>
    <string name="message_nopoll">There is no open poll.</string>
    <string name="toast_video_enabled">Video titles will begin displaying after you reconnect.</string>
    <string name="toast_no_users">No users found.</string>
    <string name="login_error">Login error</string>
    
    <string name="text_about">"BerryTubeChat android client
Copyright (C) 2012-2013 Daniel Triendl &lt;trellmor@trellmor.com&gt;

Contributors
Toastdeib

This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with this program. If not, see &lt;http://www.gnu.org/licenses&gt;."</string>
    
    
    <!-- General preferences -->
    <string name="pref_header_general">General</string>
    <string name="pref_scrollback_title">Scrollback size</string>
    <string name="pref_scrollback_summary">Up to %d lines</string>
    <string name="pref_show_drinks_title">Show drink count</string>
    <string name="pref_show_popup_poll_title">Poll pop-up</string>
    <string name="pref_show_popup_poll_summary">Show pop-up dialog on new polls</string>
	<string name="pref_flair_title">Select flair</string>
    
    <string-array name="pref_flair_options">
        <item>None</item>
        <item>Wine</item>
        <item>Cocktail</item>
        <item>Cider</item>
        <item>Liquor (1)</item>
        <item>Liquor (2)</item>
        <item>Beer</item>
    </string-array>
    
    <string-array name="pref_flair_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="pref_timestamp_title">Display timestamps</string>
    <string name="pref_video_title">Show current video</string>
    <string name="pref_video_summary">The currently playing video will display at the top of the screen</string>
    
	<!-- Notification preferences -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_squee_title">New message notifications</string>
    <string name="pref_squee_vibrate_title">Vibrate</string>
    <string name="pref_squee_ringtone_title">Ringtone</string>
    <string name="pref_squee_ringtone_silent">Silent</string>
    
</resources>