<?xml version="1.0" encoding="utf-8"?>

<!--
	BerryTubeChat android client
	Copyright (C) 2012-2013 Daniel Triendl <trellmor@trellmor.com>
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	 
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_poll"
        android:title="@string/menu_poll"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/menu_users"
        android:title="@string/menu_users"
        android:orderInCategory="200"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="300"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="400"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_donate"
        android:title="@string/menu_donate"
        android:orderInCategory="500"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:orderInCategory="600"
        android:showAsAction="never" />
    
</menu>
