<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user"
        android:singleLine="true">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_user"
        android:inputType="textPassword" 
        android:hint="@string/edit_password"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edit_password"
        android:text="@string/button_login"
        android:onClick="login" />

    <CheckBox
        android:id="@+id/check_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edit_password"
        android:text="@string/check_remember" />
    
</RelativeLayout>
