<?xml version="1.0" encoding="utf-8"?>

<!--
	BerryTubeChat android client
	Copyright (C) 2012-2013 Daniel Triendl <trellmor@trellmor.com>
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	 
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked.
    -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="com.trellmor.berrytubechat.settings.squee"
        android:title="@string/pref_squee_title" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="com.trellmor.berrytubechat.settings.squee"
        android:key="com.trellmor.berrytubechat.settings.squee.ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_squee_ringtone_title"
        android:showDefault="true"
        android:showSilent="true" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="com.trellmor.berrytubechat.settings.squee"
        android:key="com.trellmor.berrytubechat.settings.squee.vibrate"
        android:title="@string/pref_squee_vibrate_title" />

</PreferenceScreen>
